tests/fixtures/positive/empty-blocks/EmptyInitBlock.kt
package fixtures.positive.emptyblocks

class Foo {
    init { }
}
