tests/fixtures/negative/empty-blocks/EmptyDefaultConstructor.kt
package fixtures.negative.emptyblocks

class Foo(val x: Int) { }
